devops-kubernetes-resources-references/kubernetes-istio-scripts/kubernetes/gateway-api-traffic-management/devops-gateway-api-app.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devops

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: devops-ingress-blue-deployment-2-0-0
  labels:
    app.kubernetes.io/name: devops-ingress-blue-2-0-0
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-ingress-blue-2-0-0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-ingress-blue-2-0-0
        app.kubernetes.io/version: 2.0.0
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:2.0.0
        resources:
          limits:
            cpu: "0.3"
            memory: 200M
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: devops-ingress-blue-deployment-2-0-1
  labels:
    app.kubernetes.io/name: devops-ingress-blue-2-0-1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-ingress-blue-2-0-1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-ingress-blue-2-0-1
        app.kubernetes.io/version: 2.0.1
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:2.0.1
        resources:
          limits:
            cpu: "0.3"
            memory: 200M
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip-2-0-0
  labels:
    app.kubernetes.io/name: devops-ingress-blue-2-0-0
spec:
  selector:
    app.kubernetes.io/name: devops-ingress-blue-2-0-0
  ports:
  - port: 8111
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip-2-0-1
  labels:
    app.kubernetes.io/name: devops-ingress-blue-2-0-1
spec:
  selector:
    app.kubernetes.io/name: devops-ingress-blue-2-0-1
  ports:
  - port: 8111
    name: http
