devops-kubernetes-resources-references/kubernetes-istio-scripts/kubernetes/gateway-api-traffic-management/devops-gateway-api-class.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: devops-gateway
  namespace: devops
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
