devops-kubernetes-resources-references/kubernetes-istio-scripts/kubernetes/gateway-api-traffic-management/gateway-api-http-method-matching.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-blue-http-method-matching
  namespace: devops
spec:
  parentRefs:
  - name: devops-gateway
    namespace: devops
  rules:
  # Route GET and POST requests to version 2.0.0
  - matches:
    - path:
        type: PathPrefix
        value: /devops/blue
      method: GET
    - path:
        type: PathPrefix
        value: /devops/blue
      method: POST
    backendRefs:
    - name: devops-blue-clusterip-2-0-0
      port: 8111
  # Route all other HTTP methods to version 2.0.1
  - matches:
    - path:
        type: PathPrefix
        value: /devops/blue
    backendRefs:
    - name: devops-blue-clusterip-2-0-1
      port: 8111
