devops-kubernetes-resources-references/kubernetes-istio-scripts/kubernetes/gateway-api-traffic-management/gateway-api-query-parameter-matching.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-blue-query-parameter-matching
  namespace: devops
spec:
  parentRefs:
  - name: devops-gateway
    namespace: devops
  rules:
  # Route requests to /devops/blue with shape=circle, eclipse, or oval to version 2.0.0
  - matches:
    - path:
        type: PathPrefix
        value: /devops/blue
      queryParams:
      - name: shape
        value: circle
    - path:
        type: PathPrefix
        value: /devops/blue
      queryParams:
      - name: shape
        value: eclipse
    - path:
        type: PathPrefix
        value: /devops/blue
      queryParams:
      - name: shape
        value: oval
    backendRefs:
    - name: devops-blue-clusterip-2-0-0
      port: 8111
  # Route all other requests to version 2.0.1
  - matches:
    - path:
        type: PathPrefix
        value: /devops/blue
    backendRefs:
    - name: devops-blue-clusterip-2-0-1
      port: 8111
