devops-kubernetes-resources-references/kubernetes-istio-scripts/kubernetes/gateway-api-traffic-management/gateway-api-traffic-splitting.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-blue-traffic-splitting
  namespace: devops
spec:
  parentRefs:
  - name: devops-gateway
    namespace: devops
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /devops/blue
    backendRefs:
    - name: devops-blue-clusterip-2-0-0
      port: 8111
      weight: 30
    - name: devops-blue-clusterip-2-0-1
      port: 8111
      weight: 70
